test/type_errors/cases/sql_nonrecord.ml
[%%eta.sql.table type t = int]
